manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contosoair
  labels:
    app: contosoair
    kubernetes.azure.com/generator: devhub
  namespace: contosoair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contosoair
  template:
    metadata:
      labels:
        app: contosoair
    spec:
      containers:
        - name: contosoair
          image: registry1731131235454.azurecr.io/contosoair:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: contosoair
