manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contosoair
  labels:
    kubernetes.azure.com/generator: devhub
    app: contosoair
spec:
  type: LoadBalancer
  selector:
    app: contosoair
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
